# binapi

./: CMakeLists.txt  conanfile.py
examples/asynchronous/: CMakeLists.txt
examples/asynchronous-user_data/: CMakeLists.txt
examples/synchronous/: CMakeLists.txt
examples/synchronous-user_data/: CMakeLists.txt
examples/websockets/: CMakeLists.txt  main.cpp
include/binapi/: types.hpp  websocket.hpp
src/: api.cpp  types.cpp  websocket.cpp
